Fixed a padding issue on the mobile oddsSection and the padding of the table section league table header padding on mobile

--- a/goalnownow-webapp/src/Containers/ScorePageMatches/ScorePageMatches.module.css
+++ b/goalnownow-webapp/src/Containers/ScorePageMatches/ScorePageMatches.module.css
@@ -151,6 +151,7 @@
   font-size: 12px;
   line-height: 18px;
   animation: appear 0.3s ease-in-out;
+  padding: 0.5rem 0;
 }
 
 .oddsSectionMobile > div {
